--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Aliase Media Website</title>
+      <meta name="description" content="Aliase Media helps real estate agents, brokers, and teams generate high-quality, pre-qualified buyer and seller leads with zero upfront cost. Our proven real estate lead generation system delivers exclusive prospects, real-time CRM integration, and marketing analytics — so you close more deals and grow your business with no risk." />
+      <meta name="keywords" content="real estate lead generation, real estate marketing agency, buyer and seller leads, pre-qualified real estate leads, real estate digital marketing, lead generation services for agents, real estate advertising solutions, Google Ads for real estate, social media marketing for realtors, real estate CRM integration, property marketing services, real estate sales growth strategies" />
+      <title>Aliase Media | Premium Real Estate Lead Generation That Converts</title>
     </head>
 
     <body>
